@@ -20,13 +20,13 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2007-01-01 18:14:16 $ $Revision: 1.1 $
+\  $Date: 2007-01-07 08:07:01 $ $Revision: 1.2 $
 \
 \ ==============================================================================
 
 include ffl/tst.fs
 include ffl/dcl.fs
-\ include ffl/sci.fs
+include ffl/dci.fs
 
 
 .( Testing: dcl, dcn and dci) cr 
@@ -64,7 +64,7 @@ t{    dcl1 dcl-empty?   ?true   }t
 
 
 
-t{ dcl-new constant dcl2   }t
+t{ dcl-new value dcl2   }t
 
 \ Insert-sorted
 
@@ -88,7 +88,6 @@ t{ 6  dcl2 dcl-get   12 ?s }t
 
 t{    dcl2 dcl-free   }t
 
-0 [IF]
 \ Iterator test
 
 t{ 1  dcl1 dcl-append              }t
@@ -100,41 +99,53 @@ t{ 6  dcl1 dcl-append              }t
 
 t{    dcl1 dcl-empty?   ?false     }t
 
-t{    dcl1 sci-create i1           }t
+t{    dcl1 dci-create dci1           }t
 
-t{    i1 sci-first    ?true 1 ?s }t
-t{    i1 sci-first?   ?true      }t
-t{    i1 sci-last?    ?false     }t
-t{    i1 sci-next     ?true 2 ?s }t
-t{    i1 sci-next     ?true 4 ?s }t
-t{  3 i1 sci-set                 }t
-t{    i1 sci-get      ?true 3 ?s }t
-t{    i1 sci-next     ?true 4 ?s }t
-t{    i1 sci-first?   ?false     }t
-t{    i1 sci-last?    ?false     }t
-t{    i1 sci-next     ?true 5 ?s }t
-t{    i1 sci-next     ?true 6 ?s }t
-t{    i1 sci-first?   ?false     }t
-t{    i1 sci-last?    ?true      }t
+t{    dci1 dci-first    ?true 1 ?s }t
+t{  4 dci1 dci-move     ?true      }t
+t{  4 dci1 dci-move     ?true      }t
+t{  4 dci1 dci-move     ?false     }t
+
+t{    dci1 dci-first    ?true 1 ?s }t
+t{    dci1 dci-first?   ?true      }t
+t{    dci1 dci-last?    ?false     }t
+t{    dci1 dci-next     ?true 2 ?s }t
+t{    dci1 dci-next     ?true 4 ?s }t
+t{  3 dci1 dci-set                 }t
+t{    dci1 dci-get      ?true 3 ?s }t
+t{    dci1 dci-next     ?true 4 ?s }t
+t{    dci1 dci-first?   ?false     }t
+t{    dci1 dci-last?    ?false     }t
+t{    dci1 dci-next     ?true 5 ?s }t
+t{    dci1 dci-next     ?true 6 ?s }t
+t{    dci1 dci-first?   ?false     }t
+t{    dci1 dci-last?    ?true      }t
 
 
-t{    i1 sci-first    ?true 1 ?s }t
-t{    i1 sci-next     ?true 2 ?s }t
-t{    i1 sci-next     ?true 3 ?s }t
-t{    i1 sci-next     ?true 4 ?s }t
-t{    i1 sci-next     ?true 5 ?s }t
-t{    i1 sci-next     ?true 6 ?s }t
-t{    i1 sci-next     ?false     }t
+t{    dci1 dci-first    ?true 1 ?s }t
+t{    dci1 dci-next     ?true 2 ?s }t
+t{    dci1 dci-next     ?true 3 ?s }t
+t{    dci1 dci-next     ?true 4 ?s }t
+t{    dci1 dci-next     ?true 5 ?s }t
+t{    dci1 dci-next     ?true 6 ?s }t
+t{    dci1 dci-next     ?false     }t
+
+t{    dci1 dci-first    2drop      }t
+t{  3 dci1 dci-move     ?true      }t
+t{  7 dci1 dci-insert-after        }t
+t{    dci1 dci-get      ?true 3 ?s }t
 
 t{    dcl1 dcl-reverse   }t
 
-t{    i1 sci-first    ?true 6 ?s }t
-t{    i1 sci-next     ?true 5 ?s }t
-t{    i1 sci-next     ?true 4 ?s }t
-t{    i1 sci-next     ?true 3 ?s }t
-t{    i1 sci-next     ?true 2 ?s }t
-t{    i1 sci-next     ?true 1 ?s }t
-t{    i1 sci-next     ?false     }t
+t{    dci1 dci-first    ?true 6 ?s }t
+t{    dci1 dci-next     ?true 5 ?s }t
+t{    dci1 dci-next     ?true 4 ?s }t
+t{    dci1 dci-next     ?true 7 ?s }t
+t{    dci1 dci-next     ?true 3 ?s }t
+t{    dci1 dci-next     ?true 2 ?s }t
+t{    dci1 dci-next     ?true 1 ?s }t
+t{    dci1 dci-next     ?false     }t
+
 
 t{    dcl1 dcl-delete-all          }t
 
@@ -144,20 +155,32 @@ t{ 3  dcl1 dcl-append              }t
 t{ 4  dcl1 dcl-append              }t
 t{ 5  dcl1 dcl-append              }t
 
+
+t{    dci1 dci-last    ?true 5 ?s  }t
+t{    dci1 dci-last?   ?true       }t
+t{    dci1 dci-prev    ?true 4 ?s  }t
+t{    dci1 dci-prev    ?true 3 ?s  }t
+t{    dci1 dci-prev    ?true 2 ?s  }t
+t{    dci1 dci-first?  ?false      }t
+t{    dci1 dci-prev    ?true 1 ?s  }t
+t{    dci1 dci-first?  ?true       }t
+t{    dci1 dci-prev    ?nil        }t
+
 \ dcl-delete test
 
 t{ 2  dcl1 dcl-delete         3 ?s }t
 t{ 0  dcl1 dcl-delete         1 ?s }t
+
 t{ 2  dcl1 dcl-delete         5 ?s }t
 
 t{ 0  dcl1 dcl-prepend             }t
 t{ 6  dcl1 dcl-append              }t
 
-t{    i1 sci-first    ?true 0 ?s }t
-t{    i1 sci-next     ?true 2 ?s }t
-t{    i1 sci-next     ?true 4 ?s }t
-t{    i1 sci-next     ?true 6 ?s }t
-t{    i1 sci-next     ?false     }t
+t{    dci1 dci-first    ?true 0 ?s }t
+t{    dci1 dci-next     ?true 2 ?s }t
+t{    dci1 dci-next     ?true 4 ?s }t
+t{    dci1 dci-next     ?true 6 ?s }t
+t{    dci1 dci-next     ?false     }t
 
 t{ 5  dcl1 dcl-remove   ?false     }t
 t{ 6  dcl1 dcl-remove   ?true      }t
@@ -166,27 +189,31 @@ t{ 0 ' + dcl1 dcl-execute  6 ?s   }t \ sum contents list
 
 t{    dcl1 dcl-delete-all          }t
 
+
+t{      dcl-new to    dcl2         }t
+t{ dcl2 dci-new value dci2         }t
+
 : dcl-test-compare
   <=> negate
 ;
 
-t{ ' dcl-test-compare dcl1 dcl-compare! }t
+t{ ' dcl-test-compare dcl2 dcl-compare! }t
 
-t{ 5  dcl1 dcl-insert-sorted       }t
-t{ 1  dcl1 dcl-insert-sorted       }t
-t{ 9  dcl1 dcl-insert-sorted       }t
-t{ 7  dcl1 dcl-insert-sorted       }t
-t{ 7  dcl1 dcl-insert-sorted       }t
+t{ 5  dcl2 dcl-insert-sorted       }t
+t{ 1  dcl2 dcl-insert-sorted       }t
+t{ 9  dcl2 dcl-insert-sorted       }t
+t{ 7  dcl2 dcl-insert-sorted       }t
+t{ 7  dcl2 dcl-insert-sorted       }t
 
-t{    i1 sci-first    ?true 9 ?s }t
-t{    i1 sci-next     ?true 7 ?s }t
-t{    i1 sci-next     ?true 7 ?s }t
-t{    i1 sci-next     ?true 5 ?s }t
-t{    i1 sci-next     ?true 1 ?s }t
-t{    i1 sci-next     ?false     }t
+t{    dci2 dci-first    ?true 9 ?s }t
+t{    dci2 dci-next     ?true 7 ?s }t
+t{    dci2 dci-next     ?true 7 ?s }t
+t{    dci2 dci-next     ?true 5 ?s }t
+t{    dci2 dci-next     ?true 1 ?s }t
+t{    dci2 dci-next     ?false     }t
 
-t{    dcl1 dcl-delete-all          }t
-[THEN]
+t{ dci2 dci-free }t
+t{ dcl2 dcl-free }t
 
 \ ==============================================================================
 
