@@ -1,4 +1,6 @@
 0.4.0:
+* tst: tst-get-result will now also return ms since tst-reset-tests (2007-01-07)
+* dci: new module (Double linked cell list iterator) (2007-01-07)
 * dni: new module (Double linked node list iterator) (2007-01-03)
 * dcl: new module (Double linked cell list) (2006-12-31)
 * dcn: new module (Double linked cell list node) (2006-12-31)
@@ -9,7 +11,7 @@
 * config: new word <=> for comparing numbers (2006-12-12)
 * chs: new words chs-set-string,chs-reset-string (2006-12-11)
 * Comment cleanup (2006-12-10)
-* tmr: new module (Timer) (2006-12-8)
+* tmr: new module (Interval timer) (2006-12-8)
 * crc: word scr-free renamed to crc-free (bug)
 * crc: word crc-start renamed to crc-reset
 * sh1: new module (Secure Hash 1) (2006-12-04)
